--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@docusaurus/core": "3.2.1",
     "@docusaurus/plugin-ideal-image": "^3.2.1",
+    "@docusaurus/plugin-sitemap": "^3.4.0",
     "@docusaurus/preset-classic": "3.2.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
