--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,16 +2,16 @@ files:
   - source: /docs/*
     ignore:
       - /docs/CNAME
-    translation: /docs_%two_letters_code%/%original_file_name%
+    translation: /%two_letters_code%/%original_path%/%original_file_name%
   - source: /docs/Dev-Guide/*
-    translation: /docs_%two_letters_code%/Dev-Guide/%original_file_name%
+    translation: /%two_letters_code%/%original_path%/%original_file_name%
   - source: /docs/FAQs/*
-    translation: /docs_%two_letters_code%/FAQs/%original_file_name%
+    translation: /%two_letters_code%/%original_path%/%original_file_name%
   - source: /docs/Learn/
     translation: /%two_letters_code%/%original_path%/%original_file_name%
   - source: /docs/Node/
-    translation: /docs_%two_letters_code%/Node/%original_file_name%
+    translation: /%two_letters_code%/%original_path%/%original_file_name%
   - source: /docs/stake-and-delegate/
-    translation: /docs_%two_letters_code%/stake-and-delegate/%original_file_name%
+    translation: /%two_letters_code%/%original_path%/%original_file_name%
   - source: /docs/api/
-    translation: /docs_%two_letters_code%/api/%original_file_name%
+    translation: /%two_letters_code%/%original_path%/%original_file_name%
