--- a/package.json
+++ b/package.json
@@ -14,24 +14,39 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
   },
+  "resolutions": {
+    "react-helmet-async": "1.3.0"
+  },
   "dependencies": {
+    "@algolia/client-search": "^5.23.4",
     "@docusaurus/core": "^3.7.0",
+    "@docusaurus/plugin-content-docs": "^3.7.0",
     "@docusaurus/plugin-google-gtag": "^3.7.0",
     "@docusaurus/preset-classic": "^3.7.0",
+    "@docusaurus/theme-common": "^3.7.0",
+    "@docusaurus/theme-search-algolia": "^3.7.0",
+    "@docusaurus/utils": "^3.7.0",
+    "@docusaurus/utils-validation": "^3.7.0",
     "@mdx-js/react": "^3.0.0",
+    "acorn": "^8.14.1",
     "clsx": "^2.0.0",
     "docusaurus-plugin-openapi-docs": "^4.3.2",
+    "docusaurus-plugin-sass": "^0.2.6",
     "docusaurus-theme-openapi-docs": "^4.3.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-loadable": "^5.5.0",
     "rehype-katex": "7",
-    "remark-math": "6"
+    "remark-math": "6",
+    "sass": "^1.86.3",
+    "search-insights": "^2.17.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.7.0",
     "@docusaurus/tsconfig": "^3.7.0",
     "@docusaurus/types": "^3.7.0",
+    "@types/react": "^19.1.2",
     "typescript": "~5.6.2"
   },
   "browserslist": {
