updated corescan api with validations

--- a/docs/api/testnet.yaml
+++ b/docs/api/testnet.yaml
@@ -289,10 +289,24 @@ paths:
           default: before
       - name: timestamp
         in: query
-        description: timestamp
+        description: Block Timestamp in UNIX Format
         required: true
         schema:
           type: string
+          pattern: '^\d+$'
+        responses:
+        '200':
+          description: Successful response
+        '400':
+          description: Invalid timestamp parameter
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Invalid timestamp must be in unix format
       
   /api/blocks/block_rewards_by_block_number/{blockno}:
     get:
