--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react-helmet-async": "1.3.0"
   },
   "dependencies": {
-    "@docsearch/css": "3",
     "@algolia/client-search": "^5.23.4",
     "@cookbookdev/docsbot": "^4.25.8",
+    "@docsearch/css": "3",
     "@docusaurus/core": "^3.7.0",
     "@docusaurus/plugin-content-docs": "^3.7.0",
     "@docusaurus/plugin-google-gtag": "^3.7.0",
+    "@docusaurus/plugin-sitemap": "^3.8.1",
     "@docusaurus/preset-classic": "^3.7.0",
     "@docusaurus/theme-common": "^3.7.0",
     "@docusaurus/theme-search-algolia": "^3.7.0",
